welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:7: error: not found: value temps
	if (temp>=60 && temps <=100 && isSummer)
                        ^