welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = 
{
	if (temp>=60 && temp<=90 && !isSummer)
	{
		return true
	}
	if (temp>=60 && temps <=100 && isSummer)
	{
		return true
	} else {
		return false
	}
}
